# hfd

./: .gitignore  Cargo.toml  README.md  sample.json
.github/workflows/: ci.yml
example/: auth.rs  dataset.rs  mirror.rs  simple.rs  thread.rs
example/hyper/: Cargo.toml  main.rs
example/rdd/: Cargo.toml
example/rdd/src/: main.rs
hfd/: Cargo.toml
hfd-cli/: Cargo.toml
hfd-cli/src/: cli.rs  lib.rs
hfd/src/: lib.rs
hfd/src/api/: mod.rs  tokio.rs  tokio_scope.rs
src/: cli.rs  lib.rs
