
[package]
name = "hfd"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version= "4.5.4", features=["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = ["stream", "http2", "json", "rustls-tls"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "fs", ] }
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
tokio-stream = "0.1.15"

[[bin]]
name = "hfd"
path = "src/cli.rs"

[lib]
name = "ld_"
path = "src/lib.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1