[package]
name = "hfd-cli"
version = "0.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", default-features = false, features = ["rt", "rt-multi-thread", "fs"] }
clap = { version= "4.5.4", features=["derive"] }
tokio-stream = "0.1.15"
libhfd = { path = "../hfd" }

[[bin]]
name = "hfd"
path = "src/cli.rs"