[package]
name = "hfd-cli"
version = "0.2.9"
edition = "2021"

[dependencies]
clap = { version= "4.5.4", features=["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = ["stream", "http2", "json", "rustls-tls"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "fs"] }
serde_json = { version = "1.0.116" }
futures = "0.3.30"

[[bin]]
name = "hfd"
path = "src/cli.rs"