[package]
name = "rddd"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", default-features = false, features = ["http2", "client"] }
hyper-util = { version = "0.1.3", features = ["client", "http2", "tokio"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt", "fs"] }
tokio-rustls  = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = { version = "1.7.0", features = ["alloc"] }
tokio-stream = "0.1.15"
webpki-roots = "0.26"
http-body-util = "0.1"
